# website-planetv

./: .env  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: master.yml
api-actix/: Cargo.toml
api-actix/src/: main.rs
api-axum/: .env  Cargo.toml  diesel.toml
api-axum/migrations/2025-03-15-101750_create_post_tag_tables/: down.sql  up.sql
api-axum/src/: main.rs  models.rs  schema.rs
api-axum/src/api/: blog_tag.rs
api-axum/src/application/: blog_tag.rs  mod.rs
api-axum/src/domain/: mod.rs
api-axum/src/infrastructure/: database.rs
api-chi/: .golangci.yml  go.mod  go.sum  main.go
api-chi/cmd/config/: api.go  auth.go  postgres.go  web.go
api-chi/cmd/controllers/: auth.go  blogfile.go  blogpost.go  blogtag.go
api-chi/cmd/middlewares/: auth.go  auth_test.go
api-chi/cmd/models/: blogfile.go  blogpost.go  blogtag.go
api-chi/cmd/repositories/: blogtag.go  blogtag_test.go  database.go  database_test.go
database-postgresql/: insert-test-data.sql  setup-database-dev.sql
database-postgresql/src/: data_tables.sql  insert-test-data.sql  insert-test.sql
diary/: tai_sao_ibus_bamboo_te.md
docker/api-chi/: Dockerfile
docker/database-postgresql/: Dockerfile
docker/web-next/: Dockerfile
docker/web-svelte/: Dockerfile
scripts/: docker.bash  start-api-chi.sh  test.bash
web-next/: package-lock.json  package.json
web-svelte/: bun.lockb  jsconfig.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
web-sveltekit/: package-lock.json  package.json  tsconfig.json
web-sveltekit/src/: app.css
(+101 files in other folders)
