[package]
name = "api-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4.40"
diesel = { version = "2.2.8", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
